--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,4 +1,3 @@
-# test1
 name: documentation
 
 on: [push, pull_request, workflow_dispatch]
@@ -20,7 +19,9 @@ jobs:
           sphinx-build docs _build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
+        # if want to view docs without pushing to main, use line directly below
         if: ${{ github.event_name == 'push' }}
+        # if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         with:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
