--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,18 @@ imagesize==1.4.1
 Jinja2==3.1.2
 joblib==1.3.2
 MarkupSafe==2.1.3
+numpy==1.26.1
 packaging==23.2
+pandas==2.1.2
 pydantic==2.4.2
 pydantic_core==2.10.1
 Pygments==2.16.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
 requests==2.31.0
+scikit-learn==1.3.2
+scipy==1.11.3
+six==1.16.0
 sniffio==1.3.0
 snowballstemmer==2.2.0
 Sphinx==7.2.6
@@ -30,6 +37,9 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.6
 sphinxcontrib-serializinghtml==1.1.9
 starlette==0.27.0
+threadpoolctl==3.2.0
 typing_extensions==4.8.0
+tzdata==2023.3
 urllib3==2.0.7
 uvicorn==0.23.2
+xgboost==2.0.1
