--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,4 +21,4 @@ jobs:
         pip install -r requirements.txt
     - name: Analysing the code with pylint
       run: |
-        python lint.py --path $(find . -name "*.py" | xargs) --threshold 5
+        pylint $(find . -name "*.py" | xargs)
