--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,4 +22,7 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         pwd
-        python lint.py --path ./app --threshold 5
+        pylint --generate-rcfile > .pylintrc
+        echo "init-hook='import sys; sys.path.append("/home/runner/work/DEPART/DEPART")'" >> .pylintrc
+        cat .pylintrc
+        pylint $(find . -name "*.py" | xargs)
