--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,6 +23,6 @@ jobs:
       run: |
         pwd
         pylint --generate-rcfile > .pylintrc
-        echo "init-hook='import sys; sys.path.append(r"/home/runner/work/DEPART/DEPART")'" >> .pylintrc
+        echo "init-hook='import sys; sys.path.append(r'/home/runner/work/DEPART/DEPART')'" >> .pylintrc
         cat .pylintrc
         pylint $(find . -name "*.py" | xargs)
