--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alabaster==0.7.13
 annotated-types==0.6.0
 anyio==3.7.1
+async-timeout==4.0.3
 Babel==2.13.0
 certifi==2023.7.22
 charset-normalizer==3.3.1
@@ -23,6 +24,7 @@ pydantic_core==2.10.1
 Pygments==2.16.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
+redis==5.0.1
 requests==2.31.0
 scikit-learn==1.3.2
 scipy==1.11.3
