--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,8 @@ sphinxcontrib-applehelp==1.0.7
 sphinxcontrib-devhelp==1.0.5
 sphinxcontrib-htmlhelp==2.0.4
 sphinxcontrib-jsmath==1.0.1
+pytest==7.4.3
+httpx==0.25.1
 sphinxcontrib-qthelp==1.0.6
 sphinxcontrib-serializinghtml==1.1.9
 starlette==0.27.0
