--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,9 +16,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-        pip install -r requirements.txt
+        pip install --upgrade pip
+        pip install -r requirements-dev.txt
     - name: Analysing the code with pylint
       run: |
         pylint $(find . -name "*.py" | xargs)
